--- a/ServerDemo/pom.xml
+++ b/ServerDemo/pom.xml
@@ -16,6 +16,7 @@
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 		<jackon-version>2.7.0</jackon-version>
+		<msgpack.version>0.6.6</msgpack.version>
 	</properties>
 
 	<dependencies>
@@ -24,5 +25,11 @@
 			<artifactId>netty-all</artifactId>
 			<version>4.1.8.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.msgpack</groupId>
+			<artifactId>msgpack</artifactId>
+			<version>${msgpack.version}</version>
+		</dependency>
+
 	</dependencies>
 </project>
