--- a/ClientDemo/pom.xml
+++ b/ClientDemo/pom.xml
@@ -8,14 +8,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<java-version>1.6</java-version>
-		<org.springframework-version>4.3.4.RELEASE</org.springframework-version>
-		<spring-security-version>3.2.5.RELEASE</spring-security-version>
-		<mybatis-version>3.2.8</mybatis-version>
-
-		<org.aspectj-version>1.6.10</org.aspectj-version>
-		<org.slf4j-version>1.6.6</org.slf4j-version>
-		<jackon-version>2.7.0</jackon-version>
+		<msgpack.version>0.6.6</msgpack.version>
 	</properties>
 
 	<dependencies>
@@ -23,6 +16,12 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.1.8.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.msgpack</groupId>
+			<artifactId>msgpack</artifactId>
+			<version>${msgpack.version}</version>
 		</dependency>
 	</dependencies>
 </project>
